# dl_lecture_competition_pub

./: .gitignore  main.py  pyproject.toml  submission.npy
