[project]
name = "dl-lecture-competition-pub"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nkowne63rt", email = "neutron63zf@gmail.com" }
]
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dl_lecture_competition_pub"]
